--- a/registration-four.html
+++ b/registration-four.html
@@ -55,7 +55,7 @@
                     window.location.href = '#'
                 })
             } else $('.gradient-button').click(function () {
-                window.location.href = '../pages/reg_full.html'
+                location.href = 'registration-full.html'
             })
         });
     })
