--- a/pay.html
+++ b/pay.html
@@ -52,10 +52,10 @@
             </div>
         </div>
     </div>
-    <p class="text-center mb-0 text-11 w-100">Ваша платежная информация защищена надежно.</p>
+    <p class="text-center mb-0 text-11 w-100 mt-3">Ваша платежная информация защищена надежно.</p>
 
     <div class="d-flex justify-content-center">
-        <button type="button" class="gradient-button focus-none">Оплатить</button>
+        <button type="button" class="gradient-button mt-4 focus-none">Оплатить</button>
     </div>
 </form>
 
