--- a/payment-method-2.html
+++ b/payment-method-2.html
@@ -27,7 +27,7 @@
             <li>
                 <input type="radio" id="t-option" name="selector">
                 <label for="t-option" class="a-center">
-                    <img src="images/click-full.png" class="w-auto h-auto">
+                    <img src="images/click-full.png" alt="png" class="w-auto h-auto">
                 </label>
 
                 <div class="check">
@@ -36,8 +36,8 @@
             </li>
             <li>
                 <input type="radio" id="f-option" name="selector">
-                <label for="t-option" class="a-center">
-                    <img src="images/payme-full.png" class="w-auto h-auto">
+                <label for="f-option" class="a-center">
+                    <img src="images/payme-full.png" alt="png" class="w-auto h-auto">
                 </label>
 
                 <div class="check">
@@ -53,8 +53,9 @@
     </form>
 
     <div class="d-flex flex-column align-items-center bottomNext">
+        <p class="text-body text-11">Ваша платежная информация защищена надежно</p>
+
         <button type="button" onclick="window.location.href='../pages/Оплатить.html'">далее</button>
-        <p>Ваша платежная информация защищена надежно</p>
     </div>
 </header>
 
