--- a/payment-method-3.html
+++ b/payment-method-3.html
@@ -28,7 +28,8 @@
                 <input type="radio" id="f-option" name="selector">
                 <label for="f-option">
                     <img src="images/Visa_2014_logo_detail.svg.png" class="mar_ri">
-                    <img src="images/masterCard.png" class="mar_bot ml-3 mb-0">
+                    <img src="images/masterCard.png" class="mar_bot">
+                    <img src="images/logo-mir.png" class="img_size">
                 </label>
 
                 <div class="check"></div>
@@ -37,8 +38,11 @@
             <li>
                 <input type="radio" id="s-option" name="selector">
                 <label for="s-option" class="a-center">
-                    <img src="images/logo_uzcard%201.png" class="mar_ri w-100 h-auto">
-                    <img src="images/humo.png" class="mar_bot ml-3 mb-0 w-100 h-auto">
+                    <div class="box_flex">
+                        <i class="fa fa-envelope"><span>CMC</span></i>
+                        <p>Только для России</p>
+                    </div>
+
                 </label>
 
                 <div class="check">
@@ -49,7 +53,7 @@
             <li>
                 <input type="radio" id="t-option" name="selector">
                 <label for="t-option" class="a-center">
-                    <img src="images/google-play-smaller-better-instant.jpg" width="230" height="130">
+                    <img src="images/google-play-smaller-better-instant.jpg" width="170" height="90">
                 </label>
 
                 <div class="check">
@@ -60,8 +64,7 @@
             <li>
                 <input type="radio" id="b-option" name="selector">
                 <label for="b-option" class="a-center">
-                    <img src="images/click.png" class="mar_ri w-100 h-auto">
-                    <img src="images/payme.png" class="mar_bot ml-3 mb-0 w-100 h-auto">
+                    <img src="images/Paypal.png" width="170" height="55">
                 </label>
 
                 <div class="check">
