--- a/registration-two.html
+++ b/registration-two.html
@@ -29,10 +29,10 @@
 <div class="registration">
     <a href="registration.html" class="text-black-50"><i class="fa fa-angle-left back"></i></a>
     <div class="d-flex align-items-center justify-content-center">
-        <span class="back-text mt-5">Введите телефон или электронний адрес</span>
+        <span class="back-text text-center text-16">Введите телефон или электронний адрес</span>
     </div>
 
-    <div class="d-flex align-items-center justify-content-center">
+    <div class="d-flex align-items-center justify-content-center mt-5">
         <nav class="d-flex align-items-center">
             <p>Телефон</p>
             <p class="active">Адрес эл.почты</p>
