--- a/registration.html
+++ b/registration.html
@@ -30,10 +30,10 @@
 <div class="registration">
     <a href="sign-up.html" class="text-black-50"><i class="fa fa-angle-left back"></i></a>
     <div class="d-flex align-items-center justify-content-center">
-        <span class="back-text mt-5">Введите телефон или электронний адрес</span>
+        <span class="back-text text-center text-16">Введите телефон или электронний адрес</span>
     </div>
 
-    <div class="d-flex align-items-center justify-content-center">
+    <div class="d-flex align-items-center justify-content-center mt-5">
         <nav class="d-flex align-items-center">
             <p class="active">Телефон</p>
             <p>Адрес эл.почты</p>
