--- a/game-catalog-steps.html
+++ b/game-catalog-steps.html
@@ -14,100 +14,100 @@
 
 <body class="game-catalog">
 <div class="px-4 mt-4">
-    <i class="back-prev color-C4 fa fa-angle-left position-relative"></i>
+    <i class="back-prev color-C4 fa fa-angle-left position-relative" onclick="location.href='game-catalog.html'"></i>
 </div>
 <p class="text-36 text-center font-weight-bold color-42">Anathomy</p>
 
 <div class="d-flex align-items-center px-4 mt-4 justify-content-between">
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/check-step.svg" class="position-absolute" alt="svg">
         <img src="images/horse.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/check-step.svg" class="position-absolute" alt="svg">
         <img src="images/guses.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/check-step.svg" class="position-absolute" alt="svg">
         <img src="images/anathomy-3.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/check-step.svg" class="position-absolute" alt="svg">
         <img src="images/anathomy-4.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
 
 </div>
 <div class="d-flex align-items-center px-4 mt-4 justify-content-between">
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-5.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-6.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-7.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-8.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
 
 </div>
 <div class="d-flex align-items-center px-4 mt-4 justify-content-between">
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-9.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-10.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-11.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-12.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
 
 </div>
 <div class="d-flex align-items-center px-4 mt-4 justify-content-between">
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-13.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-14.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-15.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-16.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
 
 </div>
 <div class="d-flex align-items-center px-4 mt-4 justify-content-between">
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-17.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-18.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-19.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-20.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
 
 </div>
 <div class="d-flex align-items-center px-4 mt-4 justify-content-between">
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-21.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-22.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-23.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
-    <a href="#" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
+    <a href="game-run.html" class="step-catalog-box position-relative d-flex align-items-start justify-content-start">
         <img src="images/anathomy-24.svg" width="70" height="70" class="p-1" alt="svg">
     </a>
 
