--- a/game-diary-in.html
+++ b/game-diary-in.html
@@ -16,12 +16,12 @@
 <div class="d-flex flex-column vh-100 justify-content-between">
     <div class="d-flex flex-column">
         <div class="pay-header position-relative">
-            <i class="fa fa-angle-left back color-C4"></i>
+            <i class="fa fa-angle-left back color-C4" onclick="location.href='game-diary.html'"></i>
 
             <p class="text-18 mb-0">Дневник</p>
         </div>
         <div class="px-4 accordion-block position-relative">
-            <div class="d-flex justify-content-between align-items-center mb-2">
+            <div class="d-flex justify-content-between align-items-center mb-2" onclick="location.href='phrases.html'">
                 <p class="w-75 text-30 line-height-32">Начальный
                     уровень</p>
 
@@ -34,7 +34,7 @@
                 </span>
                 </label>
             </div>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center" onclick="location.href='phrases.html'">
                 <p class="w-75 text-30 line-height-32">Продвинутый
                     уровень</p>
 
