--- a/game-diary.html
+++ b/game-diary.html
@@ -14,7 +14,7 @@
 
 <body class="game-catalog">
 <div class="pay-header position-relative">
-    <i class="fa fa-angle-left back color-C4"></i>
+    <i class="fa fa-angle-left back color-C4" onclick="location.href='game-run-perfect.html'"></i>
 
     <p class="text-18 mb-0">Дневник</p>
 </div>
@@ -24,10 +24,10 @@
             <p class="text-24 mb-0">День 1</p>
         </div>
 
-        <i class="fa fa-angle-right text-body right-icon-angle icon-plus"></i>
+        <i class="fa fa-angle-right text-body right-icon-angle icon-plus" onclick="location.href='game-run-perfect.html'"></i>
     </div>
     <div class="accordion-content mb-3" style="display: none">
-        <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center" onclick="location.href='game-diary-in.html'">
             <p class="w-auto font-weight-light line-height-18">Слушайте и наблюдайте 100 слов начального уровня</p>
 
             <label class="diary-check-container">
@@ -39,7 +39,7 @@
                 </span>
             </label>
         </div>
-        <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center" onclick="location.href='game-diary-in.html'">
             <p class="w-auto font-weight-light line-height-18">Слушайте и наблюдайте 150 фраз начального уровня</p>
 
             <label class="diary-check-container">
@@ -51,7 +51,7 @@
                 </span>
             </label>
         </div>
-        <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center" onclick="location.href='game-diary-in.html'">
             <p class="w-auto font-weight-light line-height-18">Слушайте и наблюдайте неправильные глаголы</p>
 
             <label class="diary-check-container">
@@ -63,7 +63,7 @@
                 </span>
             </label>
         </div>
-        <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center" onclick="location.href='game-diary-in.html'">
             <p class="w-auto font-weight-light line-height-18">Полиглот 1 урок</p>
 
             <label class="diary-check-container">
@@ -75,7 +75,7 @@
                 </span>
             </label>
         </div>
-        <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center" onclick="location.href='game-diary-in.html'">
             <p class="w-auto font-weight-light line-height-18">Слушайте и подпевайте 5-10 песен</p>
 
             <label class="diary-check-container">
