--- a/game-run-perfect.html
+++ b/game-run-perfect.html
@@ -14,7 +14,7 @@
 
 <body class="game-catalog">
 <div class="px-4 mt-4">
-    <i class="back-prev color-C4 fa fa-angle-left position-relative"></i>
+    <i class="back-prev color-C4 fa fa-angle-left position-relative" onclick="location.href='game-run-good.html'"></i>
 </div>
 <p class="text-36 text-center font-weight-bold text-body">Perfect!</p>
 
@@ -68,7 +68,7 @@
 </div>
 
 
-<p class="text-48 text-center color-42 font-weight-bold font-italic">Next</p>
+<p class="text-48 text-center color-42 font-weight-bold font-italic" onclick="location.href='game-diary.html'">Next</p>
 
 </body>
 
