--- a/new-xit-music.html
+++ b/new-xit-music.html
@@ -19,7 +19,7 @@
         <img src="images/bg-ellipse-img.png" alt="png">
     </div>
     <div class="search-xit-music d-flex align-items-center px-4">
-        <i class="back-prev fa fa-angle-left"></i>
+        <i class="back-prev fa fa-angle-left" style="z-index: 25;" onclick="location.href='xit-music.html'"></i>
 
         <div class="col-12 pr-0 pl-4">
             <div class="input-group rounded-0">
@@ -39,7 +39,7 @@
 
 <div class="my-new-music-list">
     <ul class="mt-5 px-5 mx-2">
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -56,7 +56,7 @@
 
             <img src="images/like-music.svg" alt="svg">
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -116,7 +116,7 @@
                 </div>
             </div>
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </li>
-        <li class="d-flex align-items-center justify-content-between mb-4">
+        <li class="d-flex align-items-center justify-content-between mb-4" onclick="location.href='music-play.html'">
             <div class="d-flex align-items-center music-list-menu">
                 <div class="list-icon">
                     <svg width="30"  height="30" viewBox="0 0 30 30" fill="none"
