--- a/pay-2.html
+++ b/pay-2.html
@@ -39,7 +39,7 @@
     <p class="text-body text-11">Ваша платежная информация защищена надежно</p>
 
 
-    <button type="button" onclick="window.location.href='../pages/Оплатить.html'">далее</button>
+    <button type="button" onclick="window.location.href='my-profile.html'">далее</button>
 </div>
 </body>
 <script src="js/jQuery.min.js"></script>
