--- a/payment-method-3.html
+++ b/payment-method-3.html
@@ -82,7 +82,7 @@
     <div class="d-flex flex-column align-items-center bottomNext">
         <p class="text-body text-11">Ваша платежная информация защищена надежно</p>
 
-        <button type="button" onclick="window.location.href='../pages/Оплатить.html'">далее</button>
+        <button type="button" onclick="window.location.href='pay-2.html'">далее</button>
     </div>
 </header>
 
