--- a/settings.html
+++ b/settings.html
@@ -92,7 +92,7 @@
         <p class="text-17 mb-0">Поделиться</p>
     </div>
 
-    <div class="d-flex justify-content-between align-items-center mb-4">
+    <div class="d-flex justify-content-between align-items-center mb-4" onclick="location.href='new-password.html'">
         <p class="text-17 mb-0">Изменить пароль</p>
     </div>
 
@@ -113,10 +113,10 @@
 <div class="empty-block"></div>
 
 <div class="menu-panel">
-    <a href="">
+    <a href="game-first-entry.html">
         <img src="images/home.svg" alt="svg">
     </a>
-    <a href="">
+    <a href="xit-music.html">
         <img src="images/music.svg" alt="svg">
     </a>
     <a href="">
@@ -125,7 +125,7 @@
     <a href="">
         <img src="images/panel-joystic.svg" alt="svg">
     </a>
-    <a href="">
+    <a href="films.html">
         <img src="images/panel-play.svg" alt="svg">
     </a>
 </div>
