--- a/about-the-app.html
+++ b/about-the-app.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="d-flex justify-content-center">
-        <button id="myId" class="btn-animation">Оформить подписку</button>
+        <button id="myId" class="btn-animation" onclick="location.href='pay.html'">Оформить подписку</button>
     </div>
 
 </main>
@@ -63,15 +63,15 @@
 <script src="js/bootstrap.js"></script>
 <script>
     $('.about-the-app-price-box-1').on('click', function () {
-        $('.about-the-app-price-box-2').removeClass('active')
-        $('.about-the-app-price-box-1').addClass('active')
-        $('.about-the-app-price-box-1 .rounded-10').addClass('bg-linear-dark-blue')
+        $('.about-the-app-price-box-2').removeClass('active');
+        $('.about-the-app-price-box-1').addClass('active');
+        $('.about-the-app-price-box-1 .rounded-10').addClass('bg-linear-dark-blue');
         $('.about-the-app-price-box-2 .rounded-10').removeClass('bg-linear-dark-blue')
-    })
+    });
     $('.about-the-app-price-box-2').on('click', function () {
-        $('.about-the-app-price-box-1').removeClass('active')
-        $('.about-the-app-price-box-2').addClass('active')
-        $('.about-the-app-price-box-2 .rounded-10').addClass('bg-linear-dark-blue')
+        $('.about-the-app-price-box-1').removeClass('active');
+        $('.about-the-app-price-box-2').addClass('active');
+        $('.about-the-app-price-box-2 .rounded-10').addClass('bg-linear-dark-blue');
         $('.about-the-app-price-box-1 .rounded-10').removeClass('bg-linear-dark-blue')
     })
 </script>
