--- a/game-catalog.html
+++ b/game-catalog.html
@@ -14,13 +14,13 @@
 
 <body class="game-catalog">
 <div class="px-4 mt-4">
-    <i class="back-prev color-C4 fa fa-angle-left position-relative"></i>
+    <i class="back-prev color-C4 fa fa-angle-left position-relative" onclick="location.href='game-first-entry.html'"></i>
 </div>
 <img src="images/game-wordy.svg" class="text-center d-block w-100" width="198" height="62" alt="svg">
 
 <div class="d-flex align-items-center flex-column mt-4 mb-5">
     <div class="col-10">
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">Anathomy</p>
             
@@ -35,7 +35,7 @@
             </span>
         </span>
         </button>
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">Animals</p>
 
@@ -50,7 +50,7 @@
             </span>
         </span>
         </button>
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">Appliances</p>
 
@@ -65,7 +65,7 @@
             </span>
         </span>
         </button>
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">Childhood</p>
 
@@ -80,7 +80,7 @@
             </span>
         </span>
         </button>
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">City</p>
 
@@ -95,7 +95,7 @@
             </span>
         </span>
         </button>
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">Clothes</p>
 
@@ -110,7 +110,7 @@
             </span>
         </span>
         </button>
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">Colors</p>
 
@@ -125,7 +125,7 @@
             </span>
         </span>
         </button>
-        <button type="button" class="catalog-btn focus-none w-100 mt-3">
+        <button type="button" onclick="location.href='game-catalog-steps.html'" class="catalog-btn focus-none w-100 mt-3">
         <span class="d-flex align-items-center justify-content-between">
                 <p class="text-24 text-white mb-0 ml-4">Family</p>
 
