--- a/music-play.html
+++ b/music-play.html
@@ -14,7 +14,7 @@
 
 <body class="my-music-play">
 <div class="d-flex align-items-center justify-content-between my-music-play-header px-4 py-4 mt-5">
-    <i class="back-prev color-C4 fa fa-angle-left position-relative"></i>
+    <i class="back-prev color-C4 fa fa-angle-left position-relative" onclick="location.href='new-xit-music.html'"></i>
 
     <div class="artist-img d-flex align-items-center justify-content-center ">
         <img src="images/girl-photo.svg" class="position-absolute" alt="svg">
