--- a/my-profile.html
+++ b/my-profile.html
@@ -40,16 +40,16 @@
     </div>
 
     <div class="d-flex justify-content-between align-items-center accordion-toggle mb-4">
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center" onclick="location.href='settings.html'">
             <img src="images/cog.svg" class="mr-4" alt="svg">
 
-            <p class="text-17 mb-0">Оповещения</p>
+            <p class="text-17 mb-0">Настройки</p>
         </div>
 
         <i class="fa fa-angle-right right-icon-angle icon-plus"></i>
     </div>
     <div class="accordion-content mb-4" style="display: none">
-        <h2>Hello</h2>
+
     </div>
 
 
@@ -57,10 +57,10 @@
 </div>
 
 <div class="menu-panel">
-    <a href="">
+    <a href="game-first-entry.html">
         <img src="images/home.svg" alt="svg">
     </a>
-    <a href="">
+    <a href="xit-music.html">
         <img src="images/music.svg" alt="svg">
     </a>
     <a href="">
@@ -69,7 +69,7 @@
     <a href="">
         <img src="images/panel-joystic.svg" alt="svg">
     </a>
-    <a href="">
+    <a href="films.html">
         <img src="images/panel-play.svg" alt="svg">
     </a>
 </div>
